# pdf-report

./: README.md  pyproject.toml
app/: main.py
app/data/: sample_data.json
app/static/: styles.css  styles2.css
app/templates/: report.html  report2.html
