[tool.poetry]
name = "fastapi-pdf-report"
version = "0.1.0"
description = "Generador de reportes PDF con FastAPI y WeasyPrint"
authors = ["fran <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
jinja2 = "^3.1"
weasyprint = "*"

[tool.poetry.dev-dependencies]
black = "^24.0"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
